<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbarSize="10sp"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="409dp"
        android:layout_height="145dp"
        android:background="#3B5998"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="126dp"
            android:layout_height="20dp"
            android:layout_marginTop="28dp"
            android:text="@string/correo_label"
            android:textColor="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.053"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/Contra_label"
            android:textColor="#F8F8F8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.105"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/txt_correo_form"
            android:layout_width="126dp"
            android:layout_height="21dp"
            android:layout_marginTop="8dp"
            android:background="#F8F8F8"
            android:ems="10"
            android:inputType="text"
            android:text="@string/correo_input"
            android:textSize="8sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.049"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintVertical_bias="0.088" />

        <EditText
            android:id="@+id/txt_contraseña_form"
            android:layout_width="133dp"
            android:layout_height="23dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:background="#FAF8F8"
            android:ems="10"
            android:inputType="text"
            android:text="@string/contra_input"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/txt_correo_form"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintVertical_bias="0.089" />

        <Button
            android:id="@+id/entrar_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/entrar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.95"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.551" />

        <CheckBox
            android:id="@+id/check_no_cerrar"
            android:layout_width="128dp"
            android:layout_height="24dp"
            android:buttonTint="#F2F2F2"
            android:text="@string/no_cerrar_sesion"
            android:textColor="#FAF8F8"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.051"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.861"
            app:useMaterialThemeColors="true" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="134dp"
            android:layout_height="21dp"
            android:text="@string/contra_olvidada_label"
            android:textColor="#FAF7F7"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.573"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.866" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="408dp"
        android:layout_height="1451dp"
        android:background="#D2D9E7"
        android:foregroundTint="#E7E0E0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.181"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="159dp"
            android:layout_height="47dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/title_register_label"
            android:textColor="#3B5998"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/title_2_label"
            android:textColor="#7290E2"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="77dp"
            android:layout_height="26dp"
            android:layout_marginStart="56dp"
            android:layout_marginTop="124dp"
            android:text="@string/name_label"
            android:textAlignment="textEnd"
            android:textColor="#5573AF"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="77dp"
            android:layout_height="23dp"
            android:layout_marginStart="56dp"
            android:layout_marginTop="20dp"
            android:text="@string/apelli_label"
            android:textAlignment="textEnd"
            android:textColor="#5573AF"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <EditText
            android:id="@+id/txt_name"
            android:layout_width="207dp"
            android:layout_height="30dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:background="#F8F4F4"
            android:ems="10"
            android:inputType="text"
            android:text="@string/name_input"
            android:textSize="10sp"
            app:layout_constraintStart_toEndOf="@+id/textView6"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <EditText
            android:id="@+id/txt_apellido"
            android:layout_width="208dp"
            android:layout_height="27dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="12dp"
            android:background="#F8F4F4"
            android:ems="10"
            android:inputType="text"
            android:text="@string/apellido_input"
            android:textSize="10sp"
            app:layout_constraintStart_toEndOf="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@+id/txt_name" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="118dp"
            android:layout_height="45dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/correo_label_form"
            android:textAlignment="textEnd"
            android:textColor="#5573AF"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <EditText
            android:id="@+id/txt_correo"
            android:layout_width="206dp"
            android:layout_height="33dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="12dp"
            android:background="#F8F4F4"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:text="@string/correo_e_input"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/textView8"
            app:layout_constraintTop_toBottomOf="@+id/txt_apellido" />

        <EditText
            android:id="@+id/txt_contraseña"
            android:layout_width="208dp"
            android:layout_height="32dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="24dp"
            android:background="#F8F4F4"
            android:ems="10"
            android:inputType="textPassword"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/textView9"
            app:layout_constraintTop_toBottomOf="@+id/txt_correo" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="81dp"
            android:layout_height="34dp"
            android:layout_marginStart="52dp"
            android:layout_marginTop="12dp"
            android:text="@string/contra_label_2"
            android:textAlignment="textEnd"
            android:textColor="#5573AF"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <Button
            android:id="@+id/registrate_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="148dp"
            android:layout_marginTop="480dp"
            android:text="@string/form_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="81dp"
            android:layout_height="22dp"
            android:layout_marginStart="52dp"
            android:layout_marginTop="12dp"
            android:text="@string/sex_label"
            android:textAlignment="textEnd"
            android:textColor="#5573AF"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView9" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="77dp"
            android:layout_height="36dp"
            android:layout_marginStart="56dp"
            android:layout_marginTop="16dp"
            android:text="@string/nacimiento_label"
            android:textAlignment="textEnd"
            android:textColor="#5573AF"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView10" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="197dp"
            android:layout_height="18dp"
            android:layout_marginStart="148dp"
            android:layout_marginTop="420dp"
            android:text="@string/extra_label"
            android:textColor="#5573AF"
            android:textSize="10sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginStart="155dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_contraseña">

            <RadioButton
                android:id="@+id/masculino_option"
                android:layout_width="5dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#F8F6F6"
                android:buttonTint="#F4F1F1"
                android:text="@string/check_masculino"
                android:textColor="#5573AF"
                android:textSize="8sp" />

            <RadioButton
                android:id="@+id/femenino_option"
                android:layout_width="5dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:buttonTint="#EBE6E6"
                android:shadowColor="#5573AF"
                android:text="@string/Femenino_input"
                android:textColor="#5573AF"
                android:textSize="8sp" />
        </RadioGroup>

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="684dp"
            android:text="@string/extraa_label"
            android:textColor="#45579D"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.582"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextDate2"
            android:layout_width="207dp"
            android:layout_height="31dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="60dp"
            android:background="#EFE8E8"
            android:ems="10"
            android:inputType="date"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/textView11"
            app:layout_constraintTop_toBottomOf="@+id/txt_contraseña" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>